--- a/index.html
+++ b/index.html
@@ -10,19 +10,14 @@
         position: relative;
     }
 
-    .overlay {
+    .gameover {
         position: absolute;
         top: 0;
         left: 0;
-        transform: translateY(110vh);
         width: 100vw;
         height: 100vh;
         background-color: rgba(0,0,0,0.6);
-        transition: all 0.6s 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
-
-    .overlay.active {
-        transform: translateY(0vh);
+        display: none;
     }
 
     .meta {
@@ -33,30 +28,24 @@
         padding-top: 15%;
     }
 
-    .button {
-
-    }
-
     .score {
         display: block;
         margin-bottom: 30px;
-    }
-
-    .code {
-        margin-top: 50px;
     }
   </style>
 </head>
 
 <body>
-    <div class='overlay'>
+    <div class='gameover'>
         <div class="meta">
             <h1>Your score:</h1>
             <span class='score'></span>
-            <button class='button'>Try again</button>
+            <button class='try-again'>Try again</button>
             <div class="code"></div>
         </div>
     </div>
+
+    <div class="start"></div>
 
     <div class="root"></div>
 
